Styling calculate button and fixing non wrapping text in a result span

--- a/cpm/src/styling/Inputs.css
+++ b/cpm/src/styling/Inputs.css
@@ -10,3 +10,13 @@
     margin-top: 3x;
     margin-bottom: 10px;
 }
+#calculate-task {
+
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+#wrong-task {
+
+  padding-top: 15px;
+}
+
