--- a/cpm/src/styling/Results.css
+++ b/cpm/src/styling/Results.css
@@ -22,7 +22,7 @@
     color : black;
     text-align: left;
     font-size: 20px;
-    white-space: nowrap;
+    
     padding-top: 0px;
     padding-bottom: 0px;
     margin-top: 2px;
